<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E0F7FA"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/login_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/login_input_nickname"
                android:textAlignment="textStart"
                android:textColorHint="@color/firstColor"
                app:startIconDrawable="@drawable/ic_baseline_person_pin_24"
                app:startIconTint="@color/firstColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginNicknameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/firstColor"
                    android:textSize="24sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/login_input_password"
                android:textAlignment="textStart"
                android:textColorHint="@color/firstColor"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="@color/firstColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPasswordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/firstColor"
                    android:textSize="24sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:shadowColor="@color/black"
                android:text="@string/login_button_text"
                android:textSize="24sp"
                app:backgroundTint="@color/firstColor"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_baseline_login_24"
                app:iconGravity="textStart" />
        </LinearLayout>
    </LinearLayout>
</layout>